# nina

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  capture-demo.js  demo.html  encode-gif.js  flake.nix  index.html  install-completions.sh  nina.nix  status.md
.agent/: CONTINUITY.md
.github/workflows/: release.yml
completions/: _nina  nina.bash  nina.fish
hooks/: pre-commit
kiln/: kiln.toml
nix/checks/: nixos-vm-smoke.nix
scripts/: kiln-fire.sh  kiln-interactive-regression.sh  kiln-vm-regression.sh  kiln-vm-smoke.sh  release.sh
src/: config.rs  dango.rs  debug.rs  editor.rs  errors.rs  exec.rs  log.rs  machine.rs  main.rs  options.rs  output.rs  packages.rs  session.rs
src/commands/: apply.rs  back.rs  boot.rs  build_cmd.rs  check.rs  clean.rs  develop.rs  diff.rs  doctor.rs  edit.rs  fetch.rs  fmt.rs  go.rs  hash.rs  hello.rs  help.rs  history.rs  info.rs  install.rs  install_menu.rs  list.rs  log_cmd.rs  mod.rs  mood.rs  option.rs  pin.rs  remove.rs  repl.rs  run_cmd.rs  search.rs  status.rs  try_pkg.rs  update.rs  upgrade.rs
src/commands/channel/: add.rs  list.rs  mod.rs  remove.rs  update.rs
src/commands/flake/: check.rs  clone_cmd.rs  init.rs  lock.rs  mod.rs  show.rs  update.rs
src/commands/pkg/: closure.rs  deps.rs  mod.rs  path.rs  size.rs  why.rs
src/commands/profile/: install.rs  list.rs  mod.rs  remove.rs  upgrade.rs
src/commands/service/: disable.rs  enable.rs  list.rs  logs.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
src/tui/: inline_search.rs  inline_search_widget.rs  kaomoji.rs  mod.rs
(+6 files in other folders)
