[package]
name = "nina"
version = "0.4.9"
edition = "2021"
description = "Friendly Rust CLI/TUI for NixOS management"
license = "MIT"
repository = "https://github.com/asha-software/nina"
homepage = "https://github.com/asha-software/nina"
readme = "README.md"
keywords = ["nixos", "cli", "tui", "rust"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
russh = "0.44"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
arboard = "3"
nucleo-matcher = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
shlex = "1"

[build-dependencies]
clap = "4"
clap_complete = "4"
